<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayEmpInfo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/dimen_10"
    android:background="@drawable/ginfo_card_gtradient">

    <ImageView
        android:id="@+id/imageViewProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="@+id/guidelineLeft"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewEmpyoyeeId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dimen_5"
        android:autoSizeMaxTextSize="@dimen/textsize_100"
        android:autoSizePresetSizes="@array/autosize_text_sizes"
        android:gravity="bottom|center_horizontal"
        android:textColor="@color/colorBlack"
        app:autoSizeMinTextSize="@dimen/textsize_12"
        app:autoSizeStepGranularity="@dimen/textsize_10"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineLeft"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewProfile"
        app:layout_constraintVertical_bias="0.95" />

    <TextView
        android:id="@+id/textViewEmployeeNameBand"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dimen_5"
        android:autoSizeMaxTextSize="@dimen/textsize_100"
        android:autoSizePresetSizes="@array/autosize_text_sizes"
        android:textColor="@color/colorBlack"
        app:autoSizeMinTextSize="@dimen/textsize_12"
        app:autoSizeStepGranularity="@dimen/textsize_2"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/textViewEmpDesignation"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewEmpDesignation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_5"
        android:textColor="@color/colorBlack"
        app:layout_constraintBottom_toTopOf="@+id/textViewEmployeeCompetency"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmployeeNameBand" />

    <TextView
        android:id="@+id/textViewEmployeeCompetency"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_5"
        android:textColor="@color/colorBlack"
        app:layout_constraintBottom_toTopOf="@+id/textViewEmployeeProject"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmpDesignation" />

    <TextView
        android:id="@+id/textViewEmployeeProject"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_5"
        android:textColor="@color/colorBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmployeeCompetency" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />


</androidx.constraintlayout.widget.ConstraintLayout>
